fix overflow bug

--- a/client/home/components/home.scss
+++ b/client/home/components/home.scss
@@ -80,6 +80,7 @@
   }
   .cardInfo {
     overflow: hidden;
+    flex: 1;
   }
   .cardInfo > .title {
     font-size: 18px;
